<resources>
    <string name="app_name">Movie List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="search">Search</string>
    <string name="overview">Overview</string>
    <string name="date">Date</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="no_movie_found">No Movie Found</string>
</resources>